Corrected spacing on homepage.

--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -15,7 +15,11 @@
     max-width: 1000px;
     width: 90%;
     margin: 0 auto;
-    padding-bottom: 150px;
+    padding-bottom: 90px;
+
+    @media only screen and (max-width : 650px) {
+      padding-bottom: 180px;
+    }
   }
 
   /* Heading -
@@ -32,18 +36,18 @@
 
     @media only screen and (min-width : 301px) {
       position: absolute;
-      left: -60px;
-      top: -55px;
+      left: -68px;
+      top: -80px;
     }
 
     @media only screen and (min-width : 519px) {
-      left: -80px;
-      top: -40px;
+      left: -98px;
+      top: -80px;
     }
   }
 
   &__heading {
-    padding: 40px 0;
+    margin-bottom: 60px;
     display: inline-block;
     position: relative;
   }
@@ -109,12 +113,12 @@
     left: 0;
     right: 0;
     margin: 0 auto;
-    top: 20px;
+    top: 50px;
 
     @media only screen and (min-width : 650px) {
       left: auto;
       margin: auto;
-      top: 75px;
+      top: 25px;
     }
 
   }
